--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "description": "Ship 1 assignment template for Node/JS at Edge Labs",
   "scripts": {
-    "test": "jest --runInBand",
-    "test:watch": "jest --watch",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest --runInBand",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "lint": "eslint .",
     "format": "prettier --write .",
     "preflight": "node scripts/preflight.mjs",
     "validate": "npm run preflight"
+  },
+  "jest": {
+    "transform": {},
+    "testEnvironment": "jsdom"
   },
   "engines": {
     "node": ">=18"
@@ -20,6 +24,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.2.0",
     "jest": "^29.6.4",
+    "jest-environment-jsdom": "^30.1.2",
     "prettier": "^3.0.3"
   }
 }
